<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pug.voteapp_android.activities.FriendlistsActivity">

    <LinearLayout
        android:id="@+id/friendlists_anchor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/friendlists_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:src="@drawable/ic_action_delete"
                android:tint="@color/colorPrimaryDark"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_friendlists_delete"/>

            <Spinner
                android:id="@+id/friendlists_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:popupBackground="@android:color/white"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/friendlists_new_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:textAppearanceSmall"
                android:text="@string/action_friendlists_new" />

            <Button
                android:id="@+id/friendlists_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:textAppearanceSmall"
                android:text="@string/action_friendlists_edit" />

        </LinearLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/friendlists_listname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_friendlist_name"
            android:inputType="text"
            android:maxLines="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/friendlists_usernames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/friendlists_add_username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_action_add"
        app:layout_anchor="@+id/friendlists_anchor"
        app:layout_anchorGravity="bottom|left" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/friendlists_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_action_save"
        app:backgroundTint="@color/greenDark"
        app:layout_anchor="@+id/friendlists_anchor"
        app:layout_anchorGravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>
