<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/poll_creation_nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/poll_creation_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/poll_creation_visibility_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/visibility_options"
                    android:gravity="start"
                    android:popupBackground="@android:color/white"
                    android:prompt="@string/prompt_visibility"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/poll_creation_expiration_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/expiration_options"
                    android:gravity="start"
                    android:popupBackground="@android:color/white"
                    android:prompt="@string/prompt_expiration"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/poll_creation_mode_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/type_options"
                    android:gravity="start"
                    android:popupBackground="@android:color/white"
                    android:prompt="@string/prompt_type"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <EditText
                android:id="@+id/poll_creation_question_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="textMultiLine|textAutoComplete"
                android:hint="@string/prompt_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/poll_creation_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_action_check"
        app:backgroundTint="@color/greenDark"
        app:layout_anchor="@+id/poll_creation_nestedscrollview"
        app:layout_anchorGravity="bottom|right" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/poll_creation_add_option_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_action_add"
        app:layout_anchor="@+id/poll_creation_nestedscrollview"
        app:layout_anchorGravity="bottom|left" />

    <ProgressBar
        android:id="@+id/poll_creation_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>